Add a warning when using the ExecTerminalProvider on recent JDKs